force-app/main/default/objects/Monthly_Partner_Request__c/Monthly_Partner_Request__c.object-meta.xml
<CustomObject>
    <description>Roll up data monthly payment on the Contract payment (final payment for the partner each month).</description>
    <label>Monthly Partner Request</label>
    <nameField>
        <label>Monthly Partner Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Partner Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>