force-app/main/default/objects/Monthly_Partner_Request__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Monthly Partner Request</relationshipLabel>
    <relationshipName>Monthly_Partner_Request</relationshipName>
    <type>Lookup</type>
</CustomField>