force-app/main/default/objects/Monthly_Partner_Request__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <description>The Monthly Payment Data holds the total payment for the partner per month. It must be related to the Contract of the Partner.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Monthly_Partner_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>