force-app/main/default/objects/Monthly_Partner_Request__c/fields/Count_Calculated_Source_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_Calculated_Source_Request__c</fullName>
    <description>Count the &quot;Monthly Source Request&quot; that the Status changed to &quot;Calculated&quot;</description>
    <label>Count Calculated Source Request</label>
    <summaryFilterItems>
        <field>Monthly_Source_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Calculated</value>
    </summaryFilterItems>
    <summaryForeignKey>Monthly_Source_Request__c.Monthly_Partner_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>