force-app/main/default/objects/Monthly_Partner_Request__c/fields/Count_Source_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_Source_Request__c</fullName>
    <description>Count all the related &quot;Monthly Source Request&quot;</description>
    <label>Count Source Request</label>
    <summaryForeignKey>Monthly_Source_Request__c.Monthly_Partner_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>