force-app/main/default/objects/Monthly_Partner_Request__c/fields/Monthly_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the &quot;Invoice Email&quot; was sent to the Billing Contact, the Flow also check this CB. This will be an indication that the Email was sent.</description>
    <inlineHelpText>When checked, Invoice Email was sent to the &quot;Billing Contact&quot;.</inlineHelpText>
    <label>Monthly Email Sent</label>
    <type>Checkbox</type>
</CustomField>