force-app/main/default/objects/Monthly_Partner_Request__c/fields/Monthly_Partner_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Partner_Payment__c</fullName>
    <description>The total payment of the Partner. Calculated from the all the related total payment of the related &quot;Monthly Source Request&quot; records.</description>
    <label>Calculated Monthly Partner Payment</label>
    <summarizedField>Monthly_Source_Request__c.Monthly_Source_Payment__c</summarizedField>
    <summaryForeignKey>Monthly_Source_Request__c.Monthly_Partner_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>