force-app/main/default/objects/Monthly_Partner_Request__c/fields/Monthly_Partner_Payment_Final__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Partner_Payment_Final__c</fullName>
    <description>Check if the price should be a fix price or calculated price</description>
    <formula>IF
(
Monthly_Partner_Payment_Fixed__c  &gt; 0,
Monthly_Partner_Payment_Fixed__c,
IF
(Monthly_Partner_Payment__c &gt; Contracts__r.Payment_Cap__c,
Contracts__r.Payment_Cap__c,
Monthly_Partner_Payment__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total cost depends on whether it&apos;s a Fixed Price contract or Calculated.</inlineHelpText>
    <label>Final Monthly Partner Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>