force-app/main/default/objects/Monthly_Partner_Request__c/fields/Monthly_Partner_Payment_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Partner_Payment_Fixed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Payment in case the Contract is Monthly - Fixed Price</description>
    <label>Fixed Monthly Partner Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>