force-app/main/default/objects/Monthly_Partner_Request__c/fields/Paid_Cap__c.field-meta.xml
<CustomField>
    <fullName>Paid_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if we paid the Partner the Cap (and override the roll-up calculation).</description>
    <label>Paid Cap</label>
    <type>Checkbox</type>
</CustomField>