force-app/main/default/objects/Monthly_Partner_Request__c/fields/Payment_Cap_Override__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cap_Override__c</fullName>
    <description>In case there is a &quot;Payment Cap&quot; on the Contract level and the &quot;Monthly Partner Payment&quot; is greater than the &quot;Payment Cap&quot;, this field should override and be mapped from the &quot;Payment Cap&quot;</description>
    <label>Payment Cap Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>