force-app/main/default/objects/Monthly_Partner_Request__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
1, &quot;1&quot;,
2, &quot;1&quot;,
3, &quot;1&quot;, 
4, &quot;2&quot;, 
5, &quot;2&quot;, 
6, &quot;2&quot;,
7, &quot;3&quot;,
8, &quot;3&quot;,
9, &quot;3&quot;,
10, &quot;4&quot;,
11, &quot;4&quot;,
12, &quot;4&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>