force-app/main/default/objects/Monthly_Partner_Request__c/fields/Send_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In order to send the &quot;Invoice Email&quot; please check this CB.</inlineHelpText>
    <label>Send Invoice Email</label>
    <type>Checkbox</type>
</CustomField>