force-app/main/default/objects/Monthly_Partner_Request__c/fields/SUM_AVG_Data_Units__c.field-meta.xml
<CustomField>
    <fullName>SUM_AVG_Data_Units__c</fullName>
    <label>SUM AVG Data Units</label>
    <summarizedField>Monthly_Source_Request__c.SUN_AVG_Data_Units__c</summarizedField>
    <summaryForeignKey>Monthly_Source_Request__c.Monthly_Partner_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>