force-app/main/default/objects/Monthly_Partner_Request__c/fields/Today_is_3_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Today_is_3_of_the_Month__c</fullName>
    <description>Use to trigger the schedule flow for Monthly Fix Price Calculation.
MIS-4319</description>
    <formula>DAY(TODAY())= 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today is 3 of the Month</label>
    <type>Checkbox</type>
</CustomField>