force-app/main/default/objects/Monthly_Partner_Request__c/listViews/All_Monthly_Partner_Request.listView-meta.xml
<ListView>
    <fullName>All_Monthly_Partner_Request</fullName>
    <columns>NAME</columns>
    <columns>SUM_AVG_Data_Units__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contracts__c</columns>
    <columns>Send_Invoice_Email__c</columns>
    <columns>Monthly_Partner_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Monthly Partner Request</label>
    <sharedTo>
        <role>Panel_Acquisition</role>
    </sharedTo>
</ListView>