force-app/main/default/objects/Monthly_Partner_Request__c/listViews/Open_Monthly_Partner_Request.listView-meta.xml
<ListView>
    <fullName>Open_Monthly_Partner_Request</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contracts__c</columns>
    <columns>Monthly_Partner_Payment_Fixed__c</columns>
    <columns>Monthly_Partner_Payment_Final__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Monthly Partner Request</label>
</ListView>